--- a/weather.html
+++ b/weather.html
@@ -81,7 +81,7 @@ var city = new OpenLayers.Layer.Vector.OWMWeather("Weather")
  
     
 //addLayer
-addLayer(L.mapbox.featureLayer('city'), 'Meteo', 6)
+//addLayer(L.mapbox.featureLayer('city'), 'Meteo', 6)
 addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), '6 Km', 5);
 addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 Km', 4);
 addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 Km', 3);
