--- a/5mdr.html
+++ b/5mdr.html
@@ -6,6 +6,7 @@
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
+<script src="http://openweathermap.org/js/OWM.OpenLayers.1.3.4.js" ></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
 
 
@@ -79,6 +80,7 @@ var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
 var ui = document.getElementById('map-ui');
+//var city = OpenLayers.Layer.Vector.OWMWeather("Weather");
 
 
  
