--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -74,10 +74,13 @@ var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14)
 var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
 var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
 var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
+var corto_km = L.mapbox.featureLayer('lucamoiana.corto_pti');
 var medio = L.mapbox.tileLayer('lucamoiana.i0588kkf');
 var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
+var medio_km = L.mapbox.featureLayer('lucamoiana.medio_pti_km);
 var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
+var lungo_km = L.mapbox.featureLayer('lucamoiana.lungo_pti_km');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
 var ui = document.getElementById('map-ui');
 //var city = OpenLayers.Layer.Vector.OWMWeather("Weather");
@@ -90,9 +93,9 @@ var ui = document.getElementById('map-ui');
  
     
 //addLayer
-addLayer(L.layerGroup([corto, corto_ristoro]), '6 Km', 5);
-addLayer(L.layerGroup([medio, corto_ristoro, medio_ristoro]), '14 Km', 4);
-addLayer(L.layerGroup([lungo, corto_ristoro, lungo_ristoro]), '20 Km', 3);
+addLayer(L.layerGroup([corto_km, corto, corto_ristoro]), '6 Km', 5);
+addLayer(L.layerGroup([medio_km, medio, corto_ristoro, medio_ristoro]), '14 Km', 4);
+addLayer(L.layerGroup([var lungo_km, lungo, corto_ristoro, lungo_ristoro]), '20 Km', 3);
 addLayer(L.mapbox.featureLayer('lucamoiana.i2f34pn3'), 'Parcheggi', 1);
 
 function addLayer(layer, name, zIndex) {
