--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -77,7 +77,7 @@ var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
 var corto_km = L.mapbox.featureLayer('lucamoiana.corto_pti');
 var medio = L.mapbox.tileLayer('lucamoiana.i0588kkf');
 var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
-var medio_km = L.mapbox.featureLayer('lucamoiana.medio_pti_km);
+var medio_km = L.mapbox.featureLayer('lucamoiana.medio_pti_km');
 var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
 var lungo_km = L.mapbox.featureLayer('lucamoiana.lungo_pti_km');
