--- a/5mdrlayer.html
+++ b/5mdrlayer.html
@@ -35,7 +35,7 @@ L.control.layers({
 }, {
     '6Km': L.layerGroup([corto, corto_ristoro]),
     '14Km': L.layerGroup([medio, medio_ristoro]),
-    '21Km': L.layerGroup([lungo, lungo_ristoro]),
+    '21Km': L.layerGroup([lungo, lungo_ristoro, lungo_pti]),
     'Parcheggi': L.mapbox.featureLayer('lucamoiana.i2f34pn3'),
     
 }).addTo(map);
