--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -74,13 +74,13 @@ var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14)
 var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
 var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
 var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
-var corto_km = L.mapbox.featureLayer('lucamoiana.corto_pti');
+var corto_km = L.mapbox.tileLayer('lucamoiana.corto_pti');
 var medio = L.mapbox.tileLayer('lucamoiana.i0588kkf');
 var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
-var medio_km = L.mapbox.featureLayer('lucamoiana.medio_pti_km');
+var medio_km = L.mapbox.tileLayer('lucamoiana.medio_pti_km');
 var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
-var lungo_km = L.mapbox.featureLayer('lucamoiana.lungo_pti_km');
+var lungo_km = L.mapbox.tileLayer('lucamoiana.lungo_pti_km');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
 var ui = document.getElementById('map-ui');
 //var city = OpenLayers.Layer.Vector.OWMWeather("Weather");
