--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -72,9 +72,8 @@
 
 var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
 var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
-var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
+var corto = L.mapbox.tileLayer('lucamoiana.corto_pti');
 var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
-var corto_pti = L.mapbox.featureLayer('lucamoiana.corto_pti');
 var medio = L.mapbox.tileLayer('lucamoiana.i0588kkf');
 var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
 var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
