--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -71,8 +71,15 @@
 
 
 var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
-var test = L.mapbox.featureLayer('lucamoiana.corto_pti');
-
+var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
+var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
+var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
+var medio = L.mapbox.tileLayer('lucamoiana.i0588kkf');
+var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
+var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
+var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
+var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
+var ui = document.getElementById('map-ui');
 //var city = OpenLayers.Layer.Vector.OWMWeather("Weather");
 
 
@@ -83,16 +90,10 @@ var test = L.mapbox.featureLayer('lucamoiana.corto_pti');
  
     
 //addLayer
-<<<<<<< HEAD
-//addLayer(L.layerGroup([corto_ristoro]), '6 Km', 5);
-//addLayer(L.layerGroup([medio, corto_ristoro, medio_ristoro]), '14 Km', 4);
-//addLayer(L.layerGroup([lungo, corto_ristoro, lungo_ristoro]), '20 Km', 3);
-=======
-//addLayer(L.layerGroup([corto, corto_ristoro, corto_km]), '6 Km', 4);
-//addLayer(L.layerGroup([medio, corto_ristoro, medio_ristoro, medio_km]), '14 Km', 3);
-//addLayer(L.layerGroup([lungo, corto_ristoro, lungo_ristoro, lungo_km]), '20 Km', 2);
->>>>>>> FETCH_HEAD
-addLayer(L.mapbox.featureLayer(test), 'test', 1);
+addLayer(L.layerGroup([corto, corto_ristoro]), '6 Km', 5);
+addLayer(L.layerGroup([medio, corto_ristoro, medio_ristoro]), '14 Km', 4);
+addLayer(L.layerGroup([lungo, corto_ristoro, lungo_ristoro]), '20 Km', 3);
+addLayer(L.mapbox.featureLayer('lucamoiana.i2f34pn3'), 'Parcheggi', 1);
 
 function addLayer(layer, name, zIndex) {
     layer
