--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -74,9 +74,9 @@ var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14)
 var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
 var corto = L.mapbox.tileLayer('lucamoiana.corto_pti');
 var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
-var medio = L.mapbox.tileLayer('lucamoiana.i0588kkf');
+var medio = L.mapbox.tileLayer('lucamoiana.percorso2');
 var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
-var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
+var lungo = L.mapbox.tileLayer('lucamoiana.percorso3');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
 var ui = document.getElementById('map-ui');
@@ -90,9 +90,9 @@ var ui = document.getElementById('map-ui');
  
     
 //addLayer
-addLayer(L.layerGroup([corto, corto_ristoro]), '6 Km', 5);
-addLayer(L.layerGroup([medio, corto_ristoro, medio_ristoro]), '14 Km', 4);
-addLayer(L.layerGroup([lungo, corto_ristoro, lungo_ristoro]), '20 Km', 3);
+addLayer(L.layerGroup([corto, corto_ristoro]), '6 Km', 4);
+addLayer(L.layerGroup([medio, corto_ristoro, medio_ristoro]), '14 Km', 3);
+addLayer(L.layerGroup([lungo, corto_ristoro, lungo_ristoro]), '20 Km', 2);
 addLayer(L.mapbox.featureLayer('lucamoiana.i2f34pn3'), 'Parcheggi', 1);
 
 function addLayer(layer, name, zIndex) {
