--- a/weather.html
+++ b/weather.html
@@ -69,55 +69,15 @@
 <div id='map'></div>
 <script>
 
+	// for OSM layer
+        var mapnik = new OpenLayers.Layer.OSM();
+	// Make weather station layer. Client clastering of markers is using. 
+	var stations = new OpenLayers.Layer.Vector.OWMStations("Stations");
+	// Make weather layer. Server clastering of markers is using.
+	var city = new OpenLayers.Layer.Vector.OWMWeather("Weather");
 
-var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
-var ui = document.getElementById('map-ui');
-var city = new OpenLayers.Layer.Vector.OWMWeather("Weather")
-
- 
-
-
- 
- 
-    
-//addLayer
-//addLayer(L.mapbox.featureLayer('city'), 'Meteo', 6)
-addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), '6 Km', 5);
-addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 Km', 4);
-addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 Km', 3);
-addLayer(L.mapbox.featureLayer('lucamoiana.i09fgicl'), 'Ristori', 2);
-addLayer(L.mapbox.featureLayer('lucamoiana.i2f34pn3'), 'Parcheggi', 1);
-
-function addLayer(layer, name, zIndex) {
-    layer
-        .setZIndex(zIndex)
-        .addTo(map);
-
-    // Create a simple layer switcher that toggles layers on
-    // and off.
-    var item = document.createElement('li');
-    var link = document.createElement('a');
-
-    link.href = '#';
-    link.className = 'active';
-    link.innerHTML = name;
-
-    link.onclick = function(e) {
-        e.preventDefault();
-        e.stopPropagation();
-
-        if (map.hasLayer(layer)) {
-            map.removeLayer(layer);
-            this.className = '';
-        } else {
-            map.addLayer(layer);
-            this.className = 'active';
-        }
-    };
-
-    item.appendChild(link);
-    ui.appendChild(item);
-}
+	// Add weather layers to map
+	map.addLayers([mapnik, stations, city]);
 </script>
 
 
