--- a/weather.html
+++ b/weather.html
@@ -1,85 +1,30 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8 />
-<title>V Maratonina del Rugareto</title>
-
-<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
-<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
+<title>Open Weather Map</title>
+<script src="http://openlayers.org/api/OpenLayers.js"></script>
 <script src="http://openweathermap.org/js/OWM.OpenLayers.1.3.4.js" ></script>
-<link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
-
-
-<style>
-  body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
 </head>
-<body>
-
-
-<style>
-#map-ui {
-    position: absolute;
-    top: 75px;
-    left: 10px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    z-index: 100;
-}
-
-#map-ui a {
-    font: normal 13px/18px 'Helvetica Neue', Helvetica, sans-serif;
-    background: #FFF;
-    color: #3C4E5A;
-    display: block;
-    margin: 0;
-    padding: 0;
-    border: 1px solid #BBB;
-    border-bottom-width: 0;
-    min-width: 138px;
-    padding: 10px;
-    text-decoration: none;
-}
-
-#map-ui a:hover {
-    background: #ECF5FA;
-}
-
-#map-ui li:last-child a {
-    border-bottom-width: 1px;
-    -webkit-border-radius: 0 0 3px 3px;
-    border-radius: 0 0 3px 3px;
-}
-
-#map-ui li:first-child a {
-    -webkit-border-radius: 3px 3px 0 0;
-    border-radius: 3px 3px 0 0;
-}
-
-#map-ui a.active {
-    background: #3887BE;
-    border-color: #3887BE;
-    border-top-color: #FFF;
-    color: #FFF;
-}
-</style>
-<ul id='map-ui'></ul>
-<div id='map'></div>
-<script>
-
-	// for OSM layer
-        var mapnik = new OpenLayers.Layer.OSM();
-	// Make weather station layer. Client clastering of markers is using. 
-	var stations = new OpenLayers.Layer.Vector.OWMStations("Stations");
-	// Make weather layer. Server clastering of markers is using.
-	var city = new OpenLayers.Layer.Vector.OWMWeather("Weather");
-
-	// Add weather layers to map
-	map.addLayers([mapnik, stations, city]);
-</script>
-
-
+<body  onload="init()">
+<div id="basicMap"></div>
 </body>
+
+<script type="text/javascript">
+function init() {
+	//Center of map
+	var lat = 7486473; 
+	var lon = 4193332;
+	var lonlat = new OpenLayers.LonLat(lon, lat);
+        var map = new OpenLayers.Map("basicMap");
+	// Create overlays
+	//  OSM
+        var mapnik = new OpenLayers.Layer.OSM();
+	// Stations
+	var stations = new OpenLayers.Layer.Vector.OWMStations("Stations");
+	// Current weather
+	var city = new OpenLayers.Layer.Vector.OWMWeather("Weather");
+	//Addind maps
+	map.addLayers([mapnik, stations, city]);
+	map.setCenter( lonlat, 10 );
+}
+</script>
 </html>
