--- a/5mdr_old.html
+++ b/5mdr_old.html
@@ -79,6 +79,7 @@ var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
 var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
+var city = L.OWM.OWMWeather("Weather");
 var ui = document.getElementById('map-ui');
 //var city = OpenLayers.Layer.Vector.OWMWeather("Weather");
 
