--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -85,6 +85,7 @@ var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
 var lungo = L.mapbox.tileLayer('lucamoiana.percorso3');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
+var city = L.OWM.current(lang: 'it');
 var ui = document.getElementById('map-ui');
 
  
