--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -65,6 +65,12 @@
     color: #FFF;
 }
 </style>
+
+<div style='position:absolute;z-
+index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
+<iframe src='http://api.openweathermap.org/data/2.0/weather/city/3178640?type=html' height='200px' frameborder='0'>
+</iframe>
+</div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
@@ -79,7 +85,6 @@ var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
 var lungo = L.mapbox.tileLayer('lucamoiana.percorso3');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
-var city = L.OWM.current(lang: 'it');
 var ui = document.getElementById('map-ui');
 
  
