--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -66,8 +66,7 @@
 }
 </style>
 
-<div style='position:absolute;z-
-index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
+<div>
 <iframe src='http://api.openweathermap.org/data/2.5/weather?lat=45.661687&lon=8.97676&mode=html' height='200px' frameborder='0'></iframe>
 </div>
 <ul id='map-ui'></ul>
