--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -67,8 +67,7 @@
 </style>
 
 <div>
-<iframe src='http://api.openweathermap.org/data/2.5/weather?lat=45.661687&lon=8.97676&mode=html' height='200px' frameborder='0'></iframe>
-</div>
+<h1>cazzuiu</h1></div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
