--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -68,7 +68,7 @@
 
 <div style='position:absolute;z-
 index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
-<iframe src='http://openweathermap.org/data/2.0/weather/city/524901?type=html' height='200px' frameborder='0'></iframe>
+<iframe src='api.openweathermap.org/data/2.5/weather?lat=35&lon=139&mode=html' height='200px' frameborder='0'></iframe>
 </div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
