--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -68,7 +68,9 @@
 
 <div style='position:absolute;z-
 index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
-<iframe src='http://openweathermap.org/data/2.0/weather/city/3178640?type=html' height='200px' frameborder='0'></iframe>
+<iframe src='http://openweathermap.org/data/2.0/weather/city/3178640?type=html' height='200px' frameborder='0'>
+  Contenuto alternativo per i browser che non leggono gli iframe.
+</iframe>
 </div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
