--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -66,12 +66,10 @@
 }
 </style>
 
-<div style='position:absolute;z-
-index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
-<iframe src='http://openweathermap.org/data/2.0/weather/city/3178640?type=html' height='200px' frameborder='0'>
-  Contenuto alternativo per i browser che non leggono gli iframe.
+<iframe src="http://pro.html.it" width="300" height="300">
+  <p>Su <a href="http://pro.html.it">PRO.HTML.it</a> - 
+  Approfondimenti sul Web Publishing e articoli per webmaster</p>
 </iframe>
-</div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
