--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -65,11 +65,12 @@
     color: #FFF;
 }
 </style>
-
+<div>
 <iframe src="http://pro.html.it" width="300" height="300">
   <p>Su <a href="http://pro.html.it">PRO.HTML.it</a> - 
   Approfondimenti sul Web Publishing e articoli per webmaster</p>
 </iframe>
+</div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
