--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -66,10 +66,7 @@
 }
 </style>
 <div>
-<iframe src="http://pro.html.it" width="300" height="300">
-  <p>Su <a href="http://pro.html.it">PRO.HTML.it</a> - 
-  Approfondimenti sul Web Publishing e articoli per webmaster</p>
-</iframe>
+<h1>machecazzosuccede</h1>
 </div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
