--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -67,8 +67,8 @@
 </style>
 
 
-<div>
-<iframe src:"http://openweathermap.org/data/2.0/weather/city/3178640?type=html"></iframe>
+<div style='position:absolute;z-index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
+<iframe src='http://api.openweathermap.org/data/2.5/weather?lat=45.661687&lon=8.97676&mode=html' height='200px' frameborder='0'></iframe>
 </div>
 <div><iframe src="http://pro.html.it" width="300" height="300">
   <p>Su <a href="http://pro.html.it">PRO.HTML.it</a> - 
