--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -68,8 +68,11 @@
 
 
 <div style='position:absolute;z-index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
-<iframe src='http://api.openweathermap.org/data/2.5/weather?lat=45.661687&lon=8.97676&mode=html' height='200px' frameborder='0'></iframe>
+<iframe src='http://api.openweathermap.org/data/2.5/weather?id=3178640&mode=html' height='200px' frameborder='0'></iframe>
 </div>
+
+
+
 
 <script>
 
