--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -70,7 +70,8 @@
 <div style='position:absolute;z-index:10;right:10px;background-color:RGBA(0,0,0,0.5);top:10px;'>
 <iframe src='http://api.openweathermap.org/data/2.5/weather?id=3178640&mode=html' height='200px' frameborder='0'></iframe>
 </div>
-
+<ul id='map-ui'></ul>
+<div id='map'></div>
 
 
 
