--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -26,8 +26,11 @@
   top:75px;
   right:10px;
   z-index:10;
-  
-  background-color:RGBA(0,0,0,0.5);
+  /*background-color:RGBA(0,0,0,0.5);*/
+  background: #3887BE;
+  border-color: #3887BE;
+  border-top-color: #FFF;
+  color: #FFF;
 }
 
 #map-ui {
