--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -82,7 +82,7 @@
 
 
 <div id='meteo'>
-<p>METEO:</p>
+<p align="center">METEO:</p>
 <iframe src='http://api.openweathermap.org/data/2.5/weather?id=3178640&mode=html' height='150px' width='150px' frameborder='0'></iframe>
 </div>
 <ul id='map-ui'></ul>
