--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -22,6 +22,7 @@
 
 #meteo
 {
+  border: 1px solid #BBB;
   font: normal 13px/18px 'Helvetica Neue', Helvetica, sans-serif;
   position:absolute;
   top:75px;
