--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -22,6 +22,9 @@
 
 #meteo
 {
+  border-bottom-width: 1px;
+  -webkit-border-radius: 0 0 3px 3px;
+  border-radius: 0 0 3px 3px;
   border: 1px solid #BBB;
   font: normal 13px/18px 'Helvetica Neue', Helvetica, sans-serif;
   position:absolute;
