--- a/5mdrcopy.html
+++ b/5mdrcopy.html
@@ -38,6 +38,12 @@
   color: #FFF;
 }
 
+#meteo p
+{
+  align="center";
+  }
+
+
 #map-ui {
     position: absolute;
     top: 75px;
@@ -87,7 +93,7 @@
 
 
 <div id='meteo'>
-<p align="center">METEO:</p>
+<p>METEO:</p>
 <iframe src='http://api.openweathermap.org/data/2.5/weather?id=3178640&mode=html' height='150px' width='150px' frameborder='0'></iframe>
 </div>
 <ul id='map-ui'></ul>
