--- a/5mdr.html
+++ b/5mdr.html
@@ -19,6 +19,32 @@
 
 
 <style>
+
+#meteo
+{
+  margin:auto;
+  border-bottom-width: 1px;
+  -webkit-border-radius: 0 0 3px 3px;
+  border-radius: 0 0 3px 3px;
+  border: 1px solid #BBB;
+  font: normal 13px/18px 'Helvetica Neue', Helvetica, sans-serif;
+  position:absolute;
+  top:75px;
+  right:10px;
+  z-index:10;
+  /*background-color:RGBA(0,0,0,0.5);*/
+  background: #3887BE;
+  border-color: #3887BE;
+  border-top-color: #FFF;
+  color: #FFF;
+}
+
+#meteo p
+{
+  text-align:center;
+  }
+
+
 #map-ui {
     position: absolute;
     top: 75px;
@@ -65,8 +91,17 @@
     color: #FFF;
 }
 </style>
+
+
+<div id='meteo'>
+<p>METEO:</p>
+<iframe src='http://api.openweathermap.org/data/2.5/weather?id=3178640&mode=html' height='150px' width='150px' frameborder='0'></iframe>
+</div>
 <ul id='map-ui'></ul>
 <div id='map'></div>
+
+
+
 <script>
 
 
@@ -80,13 +115,7 @@ var lungo = L.mapbox.tileLayer('lucamoiana.percorso3');
 var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
 var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
 var ui = document.getElementById('map-ui');
-//var city = OpenLayers.Layer.Vector.OWMWeather("Weather");
 
-
- 
-
-
- 
  
     
 //addLayer
