--- a/5mdr.html
+++ b/5mdr.html
@@ -108,7 +108,7 @@
 var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
 //var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
 var corto = L.mapbox.tileLayer('lucamoiana.corto_pti');
-var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
+var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i09fgicl');
 var medio = L.mapbox.tileLayer('lucamoiana.percorso2');
 var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
 var lungo = L.mapbox.tileLayer('lucamoiana.percorso3');
