--- a/weather.html
+++ b/weather.html
@@ -71,21 +71,29 @@
 
 
 var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
+var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
+var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
+var corto_ristoro = L.mapbox.featureLayer('lucamoiana.i057npjm');
+var medio = L.mapbox.tileLayer('lucamoiana.i0588kkf');
+var medio_ristoro = L.mapbox.featureLayer('lucamoiana.i0588kkf');
+var lungo = L.mapbox.tileLayer('lucamoiana.i058i92l');
+var lungo_ristoro = L.mapbox.featureLayer('lucamoiana.i058i92l');
+var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
+var city = OpenLayers.Layer.Vector.OWMWeather("Weather");
 var ui = document.getElementById('map-ui');
-var city = new OpenLayers.Layer.Vector.OWMWeather("Weather")
-
- 
 
 
- 
- 
-    
+
+
+
+
+
+
 //addLayer
-//addLayer(L.mapbox.featureLayer('city'), 'Meteo', 6)
-addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), '6 Km', 5);
-addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 Km', 4);
-addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 Km', 3);
-addLayer(L.mapbox.featureLayer('lucamoiana.i09fgicl'), 'Ristori', 2);
+addLayer(L.layerGroup([city]), 'Meteo', 6);
+addLayer(L.layerGroup([corto, corto_ristoro]), '6 Km', 5);
+addLayer(L.layerGroup([medio, corto_ristoro, medio_ristoro]), '14 Km', 4);
+addLayer(L.layerGroup([lungo, corto_ristoro, lungo_ristoro]), '20 Km', 3);
 addLayer(L.mapbox.featureLayer('lucamoiana.i2f34pn3'), 'Parcheggi', 1);
 
 function addLayer(layer, name, zIndex) {
