--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ $.getJSON('data/foto.geojson', function(data) {
 });
 
 var featureLayer = L.mapbox.featureLayer()
-    .loadURL('data/exp_fotolink.js')
+    .loadURL('data/foto.json')
     .addTo(map);
 
 </script>
