--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ $.getJSON('data/foto.geojson', function(data) {
 });
 
 var locations = L.mapbox.featureLayer().addTo(map)
-locations.loadURL('/data/foto2.geojson');
+locations.loadURL('/data/exp_fotolink.js');
 
 </script>
 
