--- a/utlo2014.html
+++ b/utlo2014.html
@@ -105,7 +105,7 @@
 <script>
 
 
-var map = L.mapbox.map('map','lucamoiana.jc4a9gcl').setView([45.8688, 8.4200], 12);
+var map = L.mapbox.map('map','examples.ik7djhcc').setView([45.8688, 8.4200], 12);
 
 var cortissimo = L.mapbox.tileLayer('lucamoiana.utlo_15km');
 
