--- a/utlo2014.html
+++ b/utlo2014.html
@@ -119,9 +119,9 @@ var ui = document.getElementById('map-ui');
     
 //addLayer
 addLayer(L.layerGroup([corto]), '15 Km', 4);
-addLayer(L.layerGroup([medio]), '30 Km </br>- Trail', 3);
+addLayer(L.layerGroup([medio]), '30 Km - Trail', 3);
 addLayer(L.layerGroup([lungo]), '57 Km - Ultra Trail', 2);
-addLayer(L.layerGroup([lunghissimo]), '87 Km - Ultra Trail (3pt UTMB)', 1);
+addLayer(L.layerGroup([lunghissimo]), '87 Km - Ultra Trail </br>(3pt UTMB)', 1);
 
 function addLayer(layer, name, zIndex) {
     layer
