--- a/addgpx.html
+++ b/addgpx.html
@@ -25,9 +25,9 @@ var map = L.mapbox.map('map', 'lucamoiana.jc4a9gcl');
 // - The file must either be on the same domain as the page that requests it,
 //   or both the server it is requested from and the user's browser must
 //   support CORS.
-var runLayer = omnivore.gpx('run.gpx')
+var utlo15 = omnivore.gpx('run.gpx')
     .on('ready', function() {
-        map.fitBounds(runLayer.getBounds());
+        map.fitBounds(utlo15.getBounds());
     })
     .addTo(map);
 </script>
