--- a/addgpx.html
+++ b/addgpx.html
@@ -25,7 +25,13 @@ var map = L.mapbox.map('map', 'lucamoiana.jc4a9gcl');
 // - The file must either be on the same domain as the page that requests it,
 //   or both the server it is requested from and the user's browser must
 //   support CORS.
-var utlo15 = omnivore.gpx('run.gpx')
+var utlo15 = omnivore.gpx('utlo15.gpx')
+    .addTo(map);
+var utlo30 = omnivore.gpx('utlo30.gpx')
+    .addTo(map);
+var utlo55 = omnivore.gpx('utlo55.gpx')
+    .addTo(map);
+var utlo87 = omnivore.gpx('utlo87.gpx')
     .on('ready', function() {
         map.fitBounds(utlo15.getBounds());
     })
