--- a/addgpx.html
+++ b/addgpx.html
@@ -17,7 +17,7 @@
 <div id='map'></div>
 
 <script>
-L.mapbox.accessToken = 'pk.eyJ1IjoibHVjYW1vaWFuYSIsImEiOiJfeUttT1pzIn0.7_LM4jNrpSFn7a9f6QqiYA';
+//L.mapbox.accessToken = 'pk.eyJ1IjoibHVjYW1vaWFuYSIsImEiOiJfeUttT1pzIn0.7_LM4jNrpSFn7a9f6QqiYA';
 var map = L.mapbox.map('map', 'lucamoiana.jc4a9gcl');
 
 // omnivore will AJAX-request this file behind the scenes and parse it:
