geoJSON formatting, d3 add, move geoJSON defs into callback

--- a/stresa/index.html
+++ b/stresa/index.html
@@ -10,15 +10,16 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <!-- Leaflet JS -->
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <!-- Added for  leaflet.Elevation -->
     <link rel="stylesheet" href="../dist/Leaflet.Elevation-0.0.2.css" />
     <script type="text/javascript" src="../dist/Leaflet.Elevation-0.0.2.min.js"></script>
     <!-- Added for icone maki -->
-    <script src="Leaflet.MakiMarkers.js"></script>
+    <!--<script src="Leaflet.MakiMarkers.js"></script>-->
     <!-- JQuery -->
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <!-- Added for omnivore -->
-    <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.1.2/leaflet-omnivore.min.js'></script>
+    <!-- <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.1.2/leaflet-omnivore.min.js'></script>-->
 
     <!-- ACSS for map div -->
     <style>
@@ -54,10 +55,35 @@
     map.addLayer(service).fitBounds(bounds);
         
     <!--Added track from external geojson -->
-
-    var percorso = L.geoJson().addTo(map);
+    //all used options are the default values
+    var el = L.control.elevation({
+        position: "topright",
+        theme: "steelblue-theme", //default: lime-theme
+        width: 600,
+        height: 125,
+        margins: {
+            top: 10,
+            right: 20,
+            bottom: 30,
+            left: 50
+        },
+        useHeightIndicator: true, //if false a marker is drawn at map position
+        interpolation: "linear", //see https://github.com/mbostock/d3/wiki/SVG-Shapes#wiki-area_interpolate
+        hoverNumber: {
+            decimalsX: 3, //decimals on distance (always in km)
+            decimalsY: 0, //deciamls on height (always in m)
+            formatter: undefined //custom formatter function may be injected
+        },
+        xTicks: undefined, //number of ticks in x axis, calculated by default according to width
+        yTicks: undefined, //number of ticks on y axis, calculated by default according to height
+        collapsed: false    //collapsed mode, show chart on click or mouseover
+    });
+    el.addTo(map);
+    var percorso;
     $.getJSON("data/stresa.geojson", function(json) {
-    percorso.addData(json);
+        percorso = L.geoJson(json,{
+            onEachFeature: el.addData.bind(el) //working on a better solution
+        }).addTo(map);
     });
     <!-- Create JSON Markers for start and  finish with popup -->
     
