root page for portfolio linking

--- a/stresa/index.html
+++ b/stresa/index.html
@@ -12,8 +12,8 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <!-- Added for  leaflet.Elevation -->
-    <link rel="stylesheet" href="../dist/Leaflet.Elevation-0.0.2.css" />
-    <script type="text/javascript" src="../dist/Leaflet.Elevation-0.0.2.min.js"></script>
+    <link rel="stylesheet" href="dist/Leaflet.Elevation-0.0.2.css" />
+    <script type="text/javascript" src="dist/Leaflet.Elevation-0.0.2.min.js"></script>
     <!-- Added for icone maki -->
     <!--<script src="Leaflet.MakiMarkers.js"></script>-->
     <!-- JQuery -->
