--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Lucamoiana.github.io by LucaMoiana</title>
+    <title>Luca Moiana - My project page</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Lucamoiana.github.io</h1>
-        <h2>My projects</h2>
+        <h1>Luca Moiana</h1>
+        <h2>My project page</h2>
         <a href="https://github.com/LucaMoiana" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
