--- a/stresa/index.html
+++ b/stresa/index.html
@@ -72,7 +72,7 @@
     <!--Added track from external geojson -->
     //all used options are the default values
     var el = L.control.elevation({
-        position: "bottomeleft",
+        position: "bottomleft",
         theme: "steelblue-theme", //default: lime-theme
         width: 600,
         height: 125,
