--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Lucamoiana.github.io</h1>
-        <p>My static website</p>
+        <h1>Luca Moiana</h1>
+        <p>Projects page</p>
 
 
         <p class="view"><a href="https://github.com/LucaMoiana">View My GitHub Profile</a></p>
@@ -26,9 +26,9 @@
         <h1>
 <a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>lucamoiana.github.io</h1>
 
-<p>LIST OF PROJECTS:</p>
+<p>This are the projects I am working on:</p>
 
-<p>1-Stresa: create a leafletjs map with Elevation profile, title, scalebar and markers</p>
+<p>1- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>: create a leafletjs map with Elevation profile, title, scalebar and markers</p>
 
 <p>2-UTLO: Create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar and markers</p>
 
