--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
 <p>1- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>: create a leafletjs map with Elevation profile, title, scalebar and markers</p>
 
-<p>2-UTLO: Create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar and markers</p>
+<p>2- UTLO: Create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar and markers</p>
 
-<p>3-Franciacorta: Create a leafletjs map in Bootleaf, layers will be Comuni (searchable), Historic Land Use (ON/OFF)</p>
+<p>3- Franciacorta: Create a leafletjs map in Bootleaf, layers will be Comuni (searchable), Historic Land Use (ON/OFF)</p>
 
-<p>4-PLIS: Create a leafletjs map downloading data with import.io from official website</p>
+<p>4- PLIS: Create a leafletjs map downloading data with import.io from official website</p>
 
-<p>5-Setup MAPTIME social infrastructure</p>
+<p>5- MapTimeRome: setup social infrastructure</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
