--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <h1>Luca Moiana</h1>
         <p>Projects page</p>
 
-
+        <p class="view"><a href="https://twitter.com/lucamoiana">View My Twitter Profile</a></p>
+        <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/">View My Linkedin Profile</a></p>
         <p class="view"><a href="https://github.com/LucaMoiana">View My GitHub Profile</a></p>
+        
+        
 
       </header>
       <section>
