--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <section>
         <h1>
-<a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>lucamoiana.github.io</h1>
+<a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>Luca Moiana</h1>
 
 <p>This are the projects I am working on:</p>
 
