--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="wrapper">
       <header>
         <h1>Luca Moiana</h1>
-        <p>Projects page</p>
+        <p>Environment specialist, GIS expert<br/>
+          Here struggling with code.
+        </p>
 
         <p class="view"><a href="https://twitter.com/lucamoiana">View My Twitter Profile</a></p>
         <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/">View My Linkedin Profile</a></p>
