--- a/index.html
+++ b/index.html
@@ -29,19 +29,21 @@
       </header>
       <section>
         <h1>
-<a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>Luca Moiana</h1>
+<a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>MY PROJECTS</h1>
 
-<p>This are the projects I am working on:</p>
+<p>Following a list of project I’m working on:</p>
 
-<p>1- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>: create a leafletjs map with Elevation profile, title, scalebar and markers</p>
+<p>1- <a href="http://lucamoiana.github.io/5mdr.html">V Maratona del Rugareto</a>:My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></p>
 
-<p>2- UTLO: Create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar and markers</p>
+<p>2- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>:create a leafletjs map with Elevation profile, title, scalebar and markers</p>
 
-<p>3- Franciacorta: Create a leafletjs map in Bootleaf, layers will be Comuni (searchable), Historic Land Use (ON/OFF)</p>
+<p>3- UTLO: Create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar and markers</p>
 
-<p>4- PLIS: Create a leafletjs map downloading data with import.io from official website</p>
+<p>4- Franciacorta: Create a leafletjs map in Bootleaf, layers will be Comuni (searchable), Historic Land Use (ON/OFF)</p>
 
-<p>5- MapTimeRome: setup social infrastructure</p>
+<p>5- PLIS: Create a leafletjs map downloading data with import.io from official website</p>
+
+<p>6- MapTimeRome: setup social infrastructure</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
