--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <h1>
 <a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>MY PROJECTS</h1>
 
-<p>Following a list of project I’m working on:</p>
+<p>Things I’m working on:</p>
 
-<p>1- <a href="http://lucamoiana.github.io/5mdr.html">V Maratona del Rugareto</a>:My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></p>
+<p>1- <a href="http://lucamoiana.github.io/5mdr.html">V Maratona del Rugareto</a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></p>
 
-<p>2- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>:create a leafletjs map with Elevation profile, title, scalebar and markers</p>
+<p>2- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>:Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</p>
 
 <p>3- UTLO: Create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar and markers</p>
 
