--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 
 <p>1- <a href="http://lucamoiana.github.io/5mdr.html">V Maratona del Rugareto</a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></p>
 
-<p>2- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>:Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</p>
+<p>2- <a href="http://lucamoiana.github.io/stresa/">STRESA</a>: Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</p>
 
-<p>3- UTLO: Create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar and markers</p>
+<p>3- UTLO: The goal is to create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar, markers and distance markers</p>
 
-<p>4- Franciacorta: Create a leafletjs map in Bootleaf, layers will be Comuni (searchable), Historic Land Use (ON/OFF)</p>
+<p>4- Franciacorta: The goal is to build a leafletjs map in Bootleaf with zoom to function and layers control for current and Historic Land Use (ON/OFF)</p>
 
-<p>5- PLIS: Create a leafletjs map downloading data with import.io from official website</p>
+<p>5- PLIS: The goal is to create a leafletjs map using web data imported with import.io, and create clusters for Provinces</p>
 
-<p>6- MapTimeRome: setup social infrastructure</p>
+<p>6- MapTimeRome: I'm thinking of starting a MapTime in Rome</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
