--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
 <li> <a href="http://lucamoiana.github.io/stresa/">STRESA</a>: Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</li>
 
-<li> UTLO: The goal is to create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar, markers and distance markers</li>
+<li> <b>UTLO-2015</b>: The goal is to create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar, markers and distance markers</li>
 
-<li> Franciacorta: The goal is to build a leafletjs map in Bootleaf with zoom to function and layers control for current and Historic Land Use (ON/OFF)</li>
+<li> </b>Franciacorta</b>: The goal is to build a leafletjs map in Bootleaf with zoom to function and layers control for current and Historic Land Use (ON/OFF)</li>
 
-<li> PLIS: The goal is to create a leafletjs map using web data imported with import.io, and create clusters for Provinces</li>
+<li> </b>PLIS</b>: The goal is to create a leafletjs map using web data imported with import.io, and create clusters for Provinces</li>
 
-<li> MapTimeRome: I'm thinking of starting a MapTime in Rome</li>
+<li> </b>MapTimeRome</b>: I'm thinking of starting a MapTime in Rome</li>
 </ol>
       </section>
       <footer>
