--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 <li> <b>UTLO-2015</b>: The goal is to create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar, markers and distance markers</li>
 
-<li> </b>Franciacorta</b>: The goal is to build a leafletjs map in Bootleaf with zoom to function and layers control for current and Historic Land Use (ON/OFF)</li>
+<li> <b>Franciacorta</b>: The goal is to build a leafletjs map in Bootleaf with zoom to function and layers control for current and Historic Land Use (ON/OFF)</li>
 
-<li> </b>PLIS</b>: The goal is to create a leafletjs map using web data imported with import.io, and create clusters for Provinces</li>
+<li> <b>PLIS</b>: The goal is to create a leafletjs map using web data imported with import.io, and create clusters for Provinces</li>
 
-<li> </b>MapTimeRome</b>: I'm thinking of starting a MapTime in Rome</li>
+<li> <b>MapTimeRome</b>: I'm thinking of starting a MapTime in Rome</li>
 </ol>
       </section>
       <footer>
