--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <ol>
 <li> <a href="http://lucamoiana.github.io/5mdr.html">V Maratona del Rugareto</a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></li>
 
-<li> <b><a href="http://lucamoiana.github.io/stresa/">STRESA</a></b>: Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</li>
+<li> <a href="http://lucamoiana.github.io/stresa/"><b>STRESA</b></a>: Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</li>
 
 <li> <b>UTLO-2015</b>: The goal is to create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar, markers and distance markers</li>
 
