Added link to awesome css and twitter icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!-- Added fontawesome -->
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -20,7 +23,7 @@
           Playing with code.
         </p>
 
-        <p class="view"><a href="https://twitter.com/lucamoiana">View My Twitter Profile</a></p>
+        <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter"></i></a></p>
         <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/">View My Linkedin Profile</a></p>
         <p class="view"><a href="https://github.com/LucaMoiana">View My GitHub Profile</a></p>
         
