--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
 
         <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter"></i></a></p>
-        <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="icon-linkedin"></i></a></p>
+        <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="fa fa-linkedin"></i></a></p>
         <p class="view"><a href="https://github.com/LucaMoiana">View My GitHub Profile</a></p>
         
         
