--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
           Playing with code.
         </p>
 
-        <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter"></i></a></p>
         <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="fa fa-linkedin"></i></a></p>
-        <p class="view"><a href="https://github.com/LucaMoiana">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/LucaMoiana"><i class="fa fa-github"></i></a></p>      
+        <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter"></i></a></p>
+        <p class="view"><a href="http://instagram.com/luca_moiana"><i class="fa fa-instagram"></i></a></p>
         
         
 
