--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <p>Environment specialist, GIS expert<br/>
           Playing with code.
         </p>
+        <h3>Contacts:</h3>
+        <p><br/>
+          Playing with code.
+        </p>
 
         <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="fa fa-linkedin"></i></a></p>
         <p class="view"><a href="https://github.com/LucaMoiana"><i class="fa fa-github"></i></a></p>      
