--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <p>Environment specialist, GIS expert<br/>
           Playing with code.
         </p>
-        <h3>Contacts:</h3>
-        <p><br/>
-          Playing with code.
-        </p>
-
-        <p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="fa fa-linkedin"></i></a></p>
+        <h4>Contacts:</h4>
+        <p><a href="mailto:luca_moiana@hotmail.com?Subject=From%20GitHub" target="_top"><i class="fa fa-envelope"></i> luca_moiana@hotmail.com</a><br/>
+        <a href="skype:profile_name?userinfo"><i class="fa fa-skype"></i> lucamoiana</a>
+		</p>
+		<h4>Connect:</h4>
+     	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="fa fa-linkedin"></i></a></p>
         <p class="view"><a href="https://github.com/LucaMoiana"><i class="fa fa-github"></i></a></p>      
         <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter"></i></a></p>
         <p class="view"><a href="http://instagram.com/luca_moiana"><i class="fa fa-instagram"></i></a></p>
